fix: add z-index for menu component

--- a/src/components/Navigation/Menu/Menu.module.css
+++ b/src/components/Navigation/Menu/Menu.module.css
@@ -5,6 +5,7 @@
   box-sizing: border-box;
   padding: 20px 20px;
   background-color: #f1f1f1;
+  z-index: 100;
   /* box-shadow: 0px -2px 6px rgba(0, 0, 0, 0.25); */
 }
 
